--- a/app/views/game/score.html.erb
+++ b/app/views/game/score.html.erb
@@ -1,10 +1,12 @@
-<h1>Result</h1>
-
-<ul>
-  <li>Attempt: <%= @attempt%></li>
-  <li>Translation: <%= @result[:translation]%></li>
-  <li>Time: <%= @result[:time]%></li>
-  <li>Message: <%= @result[:message]%></li>
-  <li>Score: <%= @result[:score]%></li>
-</ul>
+<div class="container">
+  <h1 class="text-center">Result</h1>
+  <ul class="text-center">
+    <li>Attempt: <%= @attempt%></li>
+    <li>Translation: <%= @result[:translation]%></li>
+    <li>Time: <%= @result[:time]%></li>
+    <li>Message: <%= @result[:message]%></li>
+    <li>Score: <%= @result[:score]%></li>
+  </ul>
+  <div class="text-center"><%= link_to("Restart", game_path) %></div>
+</div>
 
