--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -10,6 +10,21 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
- *= require_tree .
- *= require_self
  */
+@import "bootstrap-sprockets";
+@import "bootstrap";
+@import url('https://fonts.googleapis.com/css?family=Lato:400,700|Open+Sans:300,400');
+
+body {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 16px;
+  background: #D3D3D3;
+}
+
+h2, h3 {
+  font-family: 'Lato', sans-serif;
+}
+
+ul {
+    list-style-type: none;
+}
